# dactyl

./: CMakeLists.txt  LICENSE  Main.qml  fingerprintmanager.cpp  fingerprintmanager.h  main.cpp
.github/workflows/: release.yml
